# Desktop-Automation-Task

./: README.md  main.py  pyproject.toml
